# SmolSpace3D

./: CMakeLists.txt  README.md  vcpkg.json
source/smol/: space3d.hpp
source/smol/space3d/: block.cpp  block.hpp  bounds.cpp  bounds.hpp  line.cpp  line.hpp  ray.cpp  ray.hpp  region.cpp  region.hpp  vector.cpp  vector.hpp
tests/unit/: vector.cpp
